<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9e9ea">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Endereco"
            android:textColor="#1d344c" />

    </FrameLayout>

    <ScrollView
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbCep"
                android:textColor="#1d344c"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="3dp"/>

            <EditText
                android:id="@+id/edtCep"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="1dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbBairro"
                android:textColor="#1d344c"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="3dp"/>

            <EditText
                android:id="@+id/edtBairro"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="1dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbRua"
                android:textColor="#1d344c"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="3dp"/>

            <EditText
                android:id="@+id/edtRua"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="1dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbComplemento"
                android:textColor="#1d344c"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="3dp"/>

            <EditText
                android:id="@+id/edtComplemento"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="1dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbNumero"
                android:textColor="#1d344c"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="3dp"/>

            <EditText
                android:id="@+id/edtNumero"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginTop="1dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbTelefone"
                        android:textColor="#1d344c"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginTop="3dp"/>

                    <EditText
                        android:id="@+id/edtTelefone"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="1dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginLeft="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbCelular"
                        android:textColor="#1d344c"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginTop="3dp"/>

                    <EditText
                        android:id="@+id/edtCelular"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="1dp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/btnCadastrar"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:layout_width="150dp"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_botoes"
                    android:text="@string/btnCadastrar"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>