<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9e9ea"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Vacinacao"
                    android:textColor="#1d344c"
                    android:textSize="20sp" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbProprietario"
                    android:textColor="#1d344c"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtPropAnimal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="1dp"
                    android:maxLength="25" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbPet"
                    android:textColor="#1d344c"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtPet"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="1dp"
                    android:maxLength="25" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbVacina"
                    android:textColor="#1d344c"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtVacina"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="1dp"
                    android:maxLength="25" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbVermifugo"
                    android:textColor="#1d344c"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtVermifugo"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="1dp"
                    android:maxLength="25" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbPeso"
                            android:textColor="#1d344c"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/edtPeso"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="1dp"
                            android:maxLength="25" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbVencimento"
                            android:textColor="#1d344c"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/edtVencimento"
                                android:layout_width="180dp"
                                android:layout_height="40dp"
                                android:layout_marginTop="1dp"
                                android:maxLength="25" />

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="10dp"
                                android:src="@drawable/ico_calendar" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbLote"
                            android:textColor="#1d344c"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/edtLote"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="1dp"
                            android:maxLength="25" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbFabricacao"
                            android:textColor="#1d344c"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/edtFabricacao"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="1dp"
                            android:maxLength="25" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbDataDaProximaVacina"
                    android:textColor="#1d344c"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edtProximaVacina"
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="1dp"
                        android:maxLength="25" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ico_calendar" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbVeterinario"
                    android:textColor="#1d344c"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtVeterinario"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="1dp"
                    android:maxLength="25" />


                <Button
                    android:id="@+id/btnCadastrar"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:layout_width="150dp"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_botoes"
                    android:text="@string/btnCadastrar"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:textSize="18sp" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>