<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fdfdfe"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#d77a3c"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="300"
        android:gravity="center"
        android:background="#FFEFEFEF">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:src="@drawable/ico_logoinicial"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="400"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbLogin"
            android:textSize="18sp"
            android:textColor="#1d344c"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtLogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>

        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbSenha"
            android:textSize="18sp"
            android:textColor="#1d344c"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="15dp"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button

                android:id="@+id/btnEntrar"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/btnEntrar"
                android:background="@drawable/shape_botoes"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="15sp"/>

            <Button
                android:layout_marginLeft="10dp"
                android:id="@+id/btnCadastrar"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/btnCadastrar"
                android:background="@drawable/shape_botoes"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="15sp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
