<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9e9ea"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF">

                <ImageView
                    android:id="@+id/ivImgPerfil"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center|left"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ico_proprietario" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#1d344d"
                    android:layout_marginLeft="80dp"
                    android:layout_gravity="center|left"
                    android:textSize="16sp"
                    android:text="@string/PerfilUsuario"
                    android:textStyle="bold"
                    />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/lbNome"
                    android:textColor="#1d344c"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtNome"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/lbEmail"
                    android:textColor="#1d344c"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/lbCPF"
                    android:textColor="#1d344c"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtCpf"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/lbDataNascimento"
                    android:textColor="#1d344c"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edtDataNascimento"
                        android:layout_width="310dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="1dp" />

                    <ImageView
                        android:id="@+id/ivCalendario"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ico_calendar" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/lbVeterinario"
                        android:textColor="#1d344c"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/chkVeterinario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llCRMV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/lbEstadoCRMV"
                        android:textColor="#1d344c"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spn_EstadoCRMV"
                        android:layout_marginTop="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/lbNumeroCRMV"
                        android:textColor="#1d344c"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edtNumeroCRMV"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="1dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginTop="60dp">

                    <Button
                        android:id="@+id/btnCadastrar"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/shape_botoes"
                        android:text="@string/btnCadastrar"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>